<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shoppy</string>
    <string name="action_settings">Switch Language</string>
    <string name="welcome">Welcome to Shoppy!</string>
    <string name="save">Save</string>
    <string name="enter_nickname">Please enter a Nickname:</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="title_section1">Lists</string>
    <string name="title_section2">Notifications</string>
    <string name="add_list">Add List</string>
    <string name="add_a_list">Add List:</string>
    <string name="add_a_item">Add Item:</string>
    <string name="share_list">Share List</string>
    <string name="edit_list">Edit List</string>
    <string name="shared">Shared</string>
    <string name="expand">Expand</string>
    <string name="listname">Listname</string>
    <string name="quantity">Quantity</string>
    <string name="itemname">Itemname</string>
    <string name="refresh">Refresh</string>
    <string name="german">Deutsch</string>
    <string name="english">English</string>
    <string name="add_friend">Add Friend</string>
    <string name="title_activity_display_items">Items</string>
    <string name="no_notification">No new Notifications!</string>
    <string name="error">There was an error. Please try again later</string>
    <string name="enter_email">Enter Email of friend</string>
    <string name="lists_refreshed">Lists Refreshed</string>
	<string name="enter_name">Enter Name</string>
	<string name="list_exists">List already exists</string>
    
</resources>
