<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="98"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"/>
        
    <item
        android:icon="@drawable/ic_action_new"
        android:id="@+id/add_list"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/add_list"/>
    
    <item
        android:id="@+id/add_friend"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_friend"/>

</menu>
